removing preview features flag